

public abstract class AparelhoTelefonico {
    public String ligar() {
		return "esta ligando";
	}
    public  String atender() {
    	return "esta atendendo";
    }
    public String iniciarCorreioDeVoz() {
    	return "iniciando correio de voz";
    }
}
