
public interface NavegadorInternet {
	public String exibirPagina();
    public String adicionarNovaAba();
    public String AtualizarPagina();
}
