

public interface ReprodutorMusical {
	public String tocar();
    public String pausar();
    public String selecionarMusica();
}
